--- a/busqueda.html
+++ b/busqueda.html
@@ -62,10 +62,11 @@
             <nav class="nav-menu" id="nav-menu">
     <ul>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Cocinas y anafes">Cocinas y<br>anafes</a>
+            <a href="categoria.html?nombre=Cocinas, anafes y purificadores">Cocina, anafes y purificadores</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Cocinas y anafes&subcategoria=Cocinas">Cocinas</a></li>
-                <li><a href="categoria.html?nombre=Cocinas y anafes&subcategoria=Anafes">Anafes</a></li>
+                <li><a href="categoria.html?nombre=Cocinas, anafes y purificadores&subcategoria=Cocinas">Cocinas</a></li>
+                <li><a href="categoria.html?nombre=Cocinas, anafes y purificadores&subcategoria=Anafes">Anafes</a></li>
+                <li><a href="categoria.html?nombre=Cocinas, anafes y purificadores&subcategoria=Purificadores">Purificadores</a></li>
             </ul>
         </li>
         <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
@@ -140,6 +141,13 @@
                 <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Planchas de pelo">Planchas de Pelo</a></li>
                 <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Secadores de pelo">Secadores de Pelo</a></li>
                 <li><a href="categoria.html?nombre=Cuidado personal&subcategoria=Cortadoras de pelo y barba">Cortadoras de Pelo y Barba</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Jardín y tiempo libre">Jardín y tiempo libre</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Jardín y tiempo libre&Jardín">Jardín</a></li>
+                <li><a href="categoria.html?nombre=Jardín y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
             </ul>
         </li>
     </ul>
