--- a/index.html
+++ b/index.html
@@ -147,10 +147,13 @@
             </ul>
         </li>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Jardín y tiempo libre">Jardín y tiempo libre</a>
+            <a href="categoria.html?nombre=Hogar, jardín y tiempo libre">Hogar, jardín y tiempo libre</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Jardín y tiempo libre&Jardín">Jardín</a></li>
-                <li><a href="categoria.html?nombre=Jardín y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Colchones">Colchones</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Sommiers">Sommiers</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Jardín">Jardín</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
             </ul>
         </li>
     </ul>
@@ -271,6 +274,19 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<!-- Video Section -->
+<section class="video-section">
+    <div class="container">
+        <h2 class="video-title">Descubre Nuestras Ofertas</h2>
+        <div class="video-container">
+            <video controls autoplay muted loop poster="images/poster_celulares.jpg">
+                <source src="videos/celulares_18_07_2025.mp4" type="video/mp4">
+                    Tu navegador no soporta la reproducción de videos.
+            </video>
         </div>
     </div>
 </section>
