--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 <!-- Video Section -->
 <section class="video-section">
     <div class="container">
-        <h2 class="video-title">Descubre Nuestras Ofertas</h2>
+        <h2 class="video-title">Estas son nuestras ofertas de esta semana!!!</h2>
         <div class="video-container">
             <video controls autoplay muted loop poster="images/poster_celulares.jpg">
                 <source src="videos/celulares_18_07_2025.mp4" type="video/mp4">
