--- a/producto.html
+++ b/producto.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
+        <header class="header">
         <div class="container">
             <div class="header-content">
                 <div class="logo">
@@ -145,16 +145,20 @@
             </ul>
         </li>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Jardín y tiempo libre">Jardín y tiempo libre</a>
+            <a href="categoria.html?nombre=Hogar, jardín y tiempo libre">Hogar, jardín y tiempo libre</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Jardín y tiempo libre&Jardín">Jardín</a></li>
-                <li><a href="categoria.html?nombre=Jardín y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Colchones">Colchones</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Sommiers">Sommiers</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Jardín">Jardín</a></li>
+                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
             </ul>
         </li>
     </ul>
 </nav>
         </div>
     </header>
+
     <!-- Product Details -->
     <main class="container product-page">
          <main class="body-padding-top"></main>
