--- a/categoria.html
+++ b/categoria.html
@@ -144,13 +144,13 @@
             </ul>
         </li>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Hogar, jardín y tiempo libre">Hogar, jardín y tiempo libre</a>
+            <a href="categoria.html?nombre=hogar jardin y tiempo libre">hogar jardin y tiempo libre</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Colchones">Colchones</a></li>
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Sommiers">Sommiers</a></li>
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Jardín">Jardín</a></li>
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Colchones">Colchones</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Sommiers">Sommiers</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Jardín">Jardín</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
             </ul>
         </li>
     </ul>
@@ -351,7 +351,7 @@ const atributosPorCategoria = {
         "Potencia",
         "Eficiencia energética"
     ],
-    "pequeños": [
+    "pequenos": [
         "Capacidad (Litros)",
         "Potencia (W)",
         "Corte automático",
@@ -369,7 +369,29 @@ const atributosPorCategoria = {
         "Tipo de equipo",
         "Uso recomendado",
         "Potencia (W)"
-    ]
+    ],
+
+    "hogar jardin y tiempo libre": [
+        "Plazas",
+        "Dimensiones (Largo x Ancho x Alto)",
+        "Resortes",
+        "Espuma",
+        "Pillow",
+        "Estilo",
+        "Material",
+        "Materiales del relleno",
+        "Inteligente",
+        "Potencia (HP)",
+        "Cilindrada",
+        "Eléctrica",
+        "Nafta",
+        "Bolsa recolectora",
+        "Rodado",
+        "Tipo de frenos",
+        "Canasto",
+        "Portaequipaje",
+        
+    ],
 };
 
 
