--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
             </ul>
         </li>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Hogar, jardín y tiempo libre">Hogar, jardín y tiempo libre</a>
+            <a href="categoria.html?nombre=hogar jardin y tiempo libre">hogar jardin y tiempo libre</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Colchones">Colchones</a></li>
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Sommiers">Sommiers</a></li>
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Jardín">Jardín</a></li>
-                <li><a href="categoria.html?nombre=Hogar, jardín y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Colchones">Colchones</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Sommiers">Sommiers</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Jardín">Jardín</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
             </ul>
         </li>
     </ul>
