--- a/categoria.html
+++ b/categoria.html
@@ -151,6 +151,7 @@
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Jardín">Jardín</a></li>
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Piletas">Piletas</a></li>
             </ul>
         </li>
     </ul>
@@ -366,9 +367,15 @@ const atributosPorCategoria = {
         "Funciones"
     ],
     "cuidado personal": [
-        "Tipo de equipo",
-        "Uso recomendado",
-        "Potencia (W)"
+        "Potencia (W)",
+        "Temperatura máxima (°C)",
+        "Velocidades",
+        "Niveles de calor",
+        "Apto pelo",
+        "Apto barba",
+        "Autonomía (min)",
+        "Inalámbrica",
+        
     ],
 
     "hogar jardin y tiempo libre": [
@@ -390,6 +397,11 @@ const atributosPorCategoria = {
         "Tipo de frenos",
         "Canasto",
         "Portaequipaje",
+        "Capacidad de agua (L)",
+        "Forma",
+        "Dimensiones (Cm)",
+        "Inflable",
+        "Escalera",
         
     ],
 };
