--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
+    index.html<header class="header">
         <div class="container">
             <div class="header-content">
                 <div class="logo">
@@ -153,6 +153,7 @@
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Jardín">Jardín</a></li>
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Piletas">Piletas</a></li>
             </ul>
         </li>
     </ul>
