--- a/presupuesto.html
+++ b/presupuesto.html
@@ -151,6 +151,7 @@
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Jardín">Jardín</a></li>
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Piletas">Piletas</a></li>
             </ul>
         </li>
     </ul>
