--- a/busqueda.html
+++ b/busqueda.html
@@ -151,13 +151,13 @@
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Almohadas">Almohadas</a></li>
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Jardín">Jardín</a></li>
                 <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Bicicletas">Bicicletas</a></li>
+                <li><a href="categoria.html?nombre=hogar jardin y tiempo libre&subcategoria=Piletas">Piletas</a></li>
             </ul>
         </li>
     </ul>
 </nav>
         </div>
     </header>
-
     <!-- Main Content -->
     <main class="container">
         <section class="catalog">
